# jit_ocaml

./: .depend_ocaml  Makefile  Makefile.am  Makefile.in  README.md  scilab-62e0612cb0eb87cb45f4b6981baf44229d913506.diff
.deps/: libscijit_ocaml_la-jit_ocaml.Plo  libscijit_ocaml_la-serialize_visitor.Plo
includes/: jit_ocaml.h  jit_ocaml.hxx
macros/: lib
src/c/: jit_ocaml.c
src/cpp/: jit_ocaml.cpp  scicaml_ast2string.cpp  scicaml_string2ast.cpp  serialize_visitor.cpp
src/lex/: lexer.mll
src/ocaml/: main_parser.ml  scilabAst.ml  scilabAst2String.ml  scilabAst2String.mli  scilabAstPrinter.ml  scilabAstPrinter.mli  scilabCallbacks.ml  scilabString2Ast.ml  scilabString2Ast.mli  scilabTypes.ml
src/yacc/: parser.mly
tests/: for.sci
